--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"cls-rtracer": "^2.6.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-validator": "^7.0.1",
@@ -22,8 +23,8 @@
 		"mysql2": "^3.6.5",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
-		"winston-daily-rotate-file": "^4.7.1",
-		"winston": "^3.11.0"
+		"winston": "^3.11.0",
+		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.3.101",
