--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
 		"jest": "^29.7.0",
 		"jest-plugin-context": "^2.9.0",
 		"nodemon": "^3.0.2",
-		"supertest": "^6.3.3"
+		"supertest": "^6.3.3",
+		"typescript": "^5.3.3"
 	}
 }
