--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,9 @@
 		"@swc/core": "^1.3.101",
 		"@swc/jest": "^0.2.29",
 		"@testcontainers/mysql": "^10.4.0",
+		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.11",
+		"@types/supertest": "^6.0.2",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.29.1",
