--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,13 @@
 		"lint:fix": "eslint --fix \"src/**/*.js\" .",
 		"test": "jest",
 		"test:watch": "jest --watch",
-		"start": "nodemon src/index.js"
+		"start": "tsx watch src/index.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@types/node": "^20.10.6",
 		"cls-rtracer": "^2.6.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
@@ -42,6 +43,8 @@
 		"jest-plugin-context": "^2.9.0",
 		"nodemon": "^3.0.2",
 		"supertest": "^6.3.3",
+		"ts-node": "^10.9.2",
+		"tsx": "^4.7.0",
 		"typescript": "^5.3.3"
 	}
 }
