--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"lint": "eslint . --ext .js",
-		"lint:fix": "eslint --fix \"src/**/*.js\" .",
+		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"start": "tsx watch src/index.ts"
@@ -35,10 +35,15 @@
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.11",
 		"@types/supertest": "^6.0.2",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb-typescript": "^17.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jest": "^27.6.0",
+		"eslint-plugin-promise": "^6.1.1",
 		"jest": "^29.7.0",
 		"jest-plugin-context": "^2.9.0",
 		"nodemon": "^3.0.2",
