Docker Compose로 데이터베이스 구성을 추가하라
MariaDB을 사용하여 데이터베이스를 생성하고 관리하기 위한 Docker
Compose 파일을 추가했습니다.

환경 변수를 통해 루트 사용자 비밀번호, 데이터베이스 이름, 사용자 이름, 사용자 비밀번호를 설정하며,
포트 매핑 및 데이터베이스 파일을 저장하는 Volume을 정의했습니다.

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"docker:up": "docker-compose up -d",
+		"docker:down": "docker-compose down",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
 		"test": "jest",
