--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@types/jest-when": "^3.5.5",
 		"@types/node": "^20.10.6",
 		"cls-rtracer": "^2.6.3",
 		"dotenv": "^16.3.1",
@@ -49,6 +50,7 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"jest": "^29.7.0",
 		"jest-plugin-context": "^2.9.0",
+		"jest-when": "^3.6.0",
 		"supertest": "^6.3.3",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.7.0",
