타입스크립트 상대경로 옵션을 설정하라
타입스크립트 패키지 구조에 상대경로로 바꾸는 작업을 했습니다

path 경로가 절대경로 지정되어 있어 path를 알아보기 힘들어 설정 옵션을
사용하여 간략하게 볼 수 있도록 지정했습니다.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,13 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "esModuleInterop": true,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "baseUrl": "./",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+    }
   },
   "exclude": [
     "node_modules",
