jest 테스트 속도를 향상하라
jest runInBand는 jest 실행을 병렬 처리가 아닌 하나씩 실행함으로 테스트
속도 향상을 시킬 수 있습니다

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
 		"docker:down": "docker-compose down",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
-		"test": "jest",
+		"test": "jest --runInBand --detectOpenHandles --forceExit",
 		"test:watch": "jest --watch",
 		"start": "tsx watch src/index.ts"
 	},
