--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: test
-        run: npm test
+        run: npm run test:only-changed
 
       - name: lint
         run: npm run lint
