--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
 		"test": "jest --runInBand --detectOpenHandles --forceExit",
+		"test:only-changed": "jest --runInBand --onlyChanged",
 		"test:watch": "jest --watch",
 		"start": "tsx watch src/index.ts"
 	},
