BookCategoryNewRelease 서비스에 categoryId 존재 여부를 확인하는 로직으로 수정하라
반환 타입이 배열로 호출이 되어 배열 내에 카테고리 Id의 존재 여부를
확인하고 존재 하지 않으면 에러가 발생하도록 수정했습니다

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
 		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
 		"test": "jest --runInBand --detectOpenHandles --forceExit",
 		"test:only-changed": "jest --runInBand --onlyChanged",
-		"test:watch": "jest --watch",
+		"test:watch": "jest --watch --runInBand --detectOpenHandles --forceExit",
 		"start": "tsx watch src/index.ts"
 	},
 	"keywords": [],
