tsconfig에 strict 옵션을 활성화 하라

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "baseUrl": "./",
+    "strict": true,
     "paths": {
       "src/*": [
         "src/*"
