--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
 		"winston": "^3.11.0",
-		"winston-daily-rotate-file": "^4.7.1"
+		"winston-daily-rotate-file": "^4.7.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.3.101",
