--- a/server/package.json
+++ b/server/package.json
@@ -1,62 +1,64 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"type": "module",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"docker:up": "docker-compose up -d",
-		"docker:down": "docker-compose down",
-		"lint": "eslint . --ext .ts",
-		"lint:fix": "eslint --fix \"src/**/*.ts\" .",
-		"test": "jest --runInBand --detectOpenHandles --forceExit",
-		"test:only-changed": "jest --runInBand --onlyChanged",
-		"test:watch": "jest --watch --runInBand --detectOpenHandles --forceExit",
-		"start": "tsx watch src/index.ts"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"dependencies": {
-		"@types/jest-when": "^3.5.5",
-		"@types/node": "^20.10.6",
-		"cls-rtracer": "^2.6.3",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
-		"express-validator": "^7.0.1",
-		"http-status-codes": "^2.3.0",
-		"jsonwebtoken": "^9.0.2",
-		"mysql2": "^3.6.5",
-		"swagger-jsdoc": "^6.2.8",
-		"swagger-ui-express": "^5.0.0",
-		"winston": "^3.11.0",
-		"winston-daily-rotate-file": "^4.7.1",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@swc/core": "^1.3.101",
-		"@swc/jest": "^0.2.29",
-		"@testcontainers/mysql": "^10.4.0",
-		"@types/express": "^4.17.21",
-		"@types/jest": "^29.5.11",
-		"@types/jest-plugin-context": "^2.9.7",
-		"@types/jsonwebtoken": "^9.0.5",
-		"@types/supertest": "^6.0.2",
-		"@typescript-eslint/eslint-plugin": "^6.17.0",
-		"@typescript-eslint/parser": "^6.17.0",
-		"eslint": "^8.56.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-airbnb-typescript": "^17.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jest": "^27.6.0",
-		"eslint-plugin-promise": "^6.1.1",
-		"jest": "^29.7.0",
-		"jest-plugin-context": "^2.9.0",
-		"jest-when": "^3.6.0",
-		"supertest": "^6.3.3",
-		"ts-node": "^10.9.2",
-		"tsx": "^4.7.0",
-		"typescript": "^5.3.3"
-	}
+  "name": "server",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint --fix \"src/**/*.ts\" .",
+    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test:only-changed": "jest --runInBand --onlyChanged",
+    "test:watch": "jest --watch --runInBand --detectOpenHandles --forceExit",
+    "start": "tsx watch src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "@types/jest-when": "^3.5.5",
+    "@types/node": "^20.10.6",
+    "cls-rtracer": "^2.6.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.101",
+    "@swc/jest": "^0.2.29",
+    "@testcontainers/mysql": "^10.4.0",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jest-plugin-context": "^2.9.7",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
+    "jest-plugin-context": "^2.9.0",
+    "jest-when": "^3.6.0",
+    "prettier": "3.2.4",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
+  }
 }
