--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/jest-when": "^3.5.5",
     "@types/node": "^20.10.6",
     "cls-rtracer": "^2.6.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
