server start 스크립트를 업데이트하라
sever/package.json파일에서 start 스크립트를 변경했습니다.

변경된 내용
- 이전: tsx watch src/index.ts
- 변경 후: tsx --watch src/index.ts

이유
- 이전 스크립트는 tsx watch 명령어를 사용하여 서버를 시작했습니다.
- 변경된 스크립트는 더욱 간결하게 tsx 명령어와 --watch 플래그를 사용하여 서버를 시작합니다.

--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "test": "jest --runInBand --detectOpenHandles --forceExit",
     "test:only-changed": "jest --runInBand --onlyChanged",
     "test:watch": "jest --watch --runInBand --detectOpenHandles --forceExit",
-    "start": "tsx watch src/index.ts"
+    "start": "tsx --watch src/index.ts"
   },
   "keywords": [],
   "author": "",
