--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "./client/**"
+      - "client/**"
   pull_request:
     branches: [ main ]
     paths:
-      - "./client/**"
+      - "client/**"
 
 jobs:
   build:
