빌드 프로세스 업데이트 - 서버 빌드 트리거 조건 추가
설명
.github/workflows/deploy.yml 파일을 업데이트하여 빌드 프로세스를 개선했습니다.
이번 변경은 서버 코드 변경 시에만 빌드 프로세스가 실행되도록 트리거 조건을 추가했습니다.

관련 변경 사항:
pull_request 이벤트에 paths 속성 추가하여 서버 코드 변경 감지

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,12 @@ name: server
 on:
     push:
       branches: [ main ]
+      paths:
+        - "./server/**"
     pull_request:
       branches: [ main ]
-
+      paths:
+        - "./server/**"
 jobs:
   build:
     runs-on: ubuntu-latest
