--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,15 +3,19 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "./client/**"
+      - "client/**"
   pull_request:
     branches: [ main ]
     paths:
-      - "./client/**"
+      - "client/**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./client
+    
     steps:
       - uses: actions/checkout@v3
       - name: Setup node.js
