tsconfig.json 업데이트 - 경로 설정
주요 변경 사항
- tsconfig.json 파일을 업데이트하여 TypeScript 컴파일러에게 프로젝트 경로 및 파일 참조 방식을 알려줍니다.
- baseUrl 필드를 추가하여 프로젝트의 루트 디렉토리를 기준 경로로 설정합니다.
- paths 매핑을 설정하여 src 디렉토리 내 파일들을 상대 경로 대신에 별칭으로 참조할 수 있도록 합니다.
- include 필드를 업데이트하여 컴파일러가 컴파일 대상으로 포함해야 하는 파일 패턴을 명시합니다 (이 경우 src 디렉토리 하위 모든 파일).

관련 변경 사항
client/tsconfig.json 파일 수정

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,9 +19,15 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": "./",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+    }
   },
   "include": [
-    "src"
+    "./src/**/*"
   ]
 }
