server 빌드 워크플로우 업데이트 (server-node 디렉토리 반영)
- 워크플로우 이름: book-store Server -> book-store server-node
- 트리거 경로: server/** -> server-node/**
- 작업 디렉토리: ./server -> ./server-node
- 캐시 의존성 경로: ./server/package-lock.json -> ./server-node/package-lock.json

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,20 +1,20 @@
-name: book-store Server
+name: book-store server-node
 
 on:
     push:
       branches: [ main ]
       paths:
-        - "server/**"
+        - "server-node/**"
     pull_request:
       branches: [ main ]
       paths:
-        - "server/**"
+        - "server-node/**"
 jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./server
+        working-directory: ./server-node
 
     steps:
       - uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 21.2.0
           cache: "npm"
-          cache-dependency-path: ./server/package-lock.json
+          cache-dependency-path: ./server-node/package-lock.json
 
       - name: install
         run: npm install
