docker-compose.yml 업데이트 (서버 이미지 사용 및 빌드 정의)
변경 사항:
- 새로운 서비스 정의: server-node
- server-node 서비스는 이미지 jihwooon/book-store-node:latest를 사용
- 이미지 빌드 정의 추가:
  - 빌드 컨텍스트: server-node 디렉토리
  - Dockerfile: ./Dockerfile 사용
- database 서비스의 변경 사항은 없습니다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,13 @@ services:
     environment:
       TZ: Asia/Seoul
     command: --init-file /docker-entrypoint-initdb.d/init.sql
+  
+  server-node:
+    image: jihwooon/book-store-node:lts
+    restart: always
+    build:
+      context: server-node
+      dockerfile: ./Dockerfile
+    env_file:
+      - ./server-node/.env
+
