--- a/server-node/package.json
+++ b/server-node/package.json
@@ -12,7 +12,8 @@
     "test": "jest --runInBand --detectOpenHandles --forceExit",
     "test:only-changed": "jest --runInBand --onlyChanged",
     "test:watch": "jest --watch --runInBand --detectOpenHandles --forceExit",
-    "start": "tsx watch -r dotenv/config src/index.ts"
+    "start": "tsx watch -r dotenv/config src/index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
